--- a/pilar.html
+++ b/pilar.html
@@ -5,9 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Pilar</title>
-
-
-
+<!--CSS Sheets-->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy|Bree+Serif|Candal|PT+Sans">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -24,8 +22,6 @@
                         <div id="mySidenav" class="sidenav">
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <a href="#about">About</a>
-                            <a href="#event">Event</a>
-                            <a href="#menu-list">Menu</a>
                             <a href="#contact">Book a table</a>
                         </div>
                         <!-- Use any element to open the sidenav -->
@@ -87,165 +83,8 @@
             </div>
         </section>
         <!--/about-->
-        <!-- event -->
-        <section id="event">
-            <div class="bg-color" class="section-padding">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-12 text-center" style="padding:60px;">
-                            <h1 class="header-h">Up Coming events</h1>
-                            <p class="header-p">Decorations 100% complete here</p>
-                        </div>
-                        <div class="col-md-12" style="padding-bottom:60px;">
-                            <div class="item active left">
-                                <div class="col-md-6 col-sm-6 left-images">
-                                    <img src="img/res02.jpg" class="img-responsive">
-                                </div>
-                                <div class="col-md-6 col-sm-6 details-text">
-                                    <div class="content-holder">
-                                        <h2>Joyful party</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing
-                                            elit. Labore eos suscipit earum voluptas aliquam
-                                            recusandae, quae iure adipisci, inventore
-                                            quia, quos delectus quaerat praesentium id
-                                            expedita nihil illo accusantium, tempora.</p>
-                                        <address>
-                                            <strong>Place: </strong> 1612 Collins Str,
-                                            Victoria 8007
-                                            <br>
-                                            <strong>Time: </strong> 07:30pm
-                                        </address>
-                                        <a class="btn btn-imfo btn-read-more" href="events-details.html">Read more</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--/ event -->
-        <!-- menu -->
-        <section id="menu-list" class="section-padding">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center marb-35">
-                        <h1 class="header-h">Menu List</h1>
-                        <p class="header-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                            diam nonummy
-                            <br>nibh euismod tincidunt ut laoreet dolore magna aliquam.
-                            </p>
-                    </div>
-                    <div class="col-md-12  text-center gallery-trigger">
-                        <ul>
-                            <li><a class="filter" data-filter="all">Show All</a></li>
-                            <li><a class="filter" data-filter=".category-1">Breakfast</a></li>
-                            <li><a class="filter" data-filter=".category-2">Lunch</a></li>
-                            <li><a class="filter" data-filter=".category-3">Dinner</a></li>
-                        </ul>
-                    </div>
-                    <div id="Container">
-                        <div class="mix category-1 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-1 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-1 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-1 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-2 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-2 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-2 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-2 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-3 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-3 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-3 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                        <div class="mix category-3 menu-restaurant" data-myorder="2">
-                            <span class="clearfix">
-                        <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Food Item Name</a>
-                        <span style="left: 166px; right: 44px;" class="menu-line"></span>
-                            <span class="menu-price">$20.99</span>
-                            </span>
-                            <span class="menu-subtitle">Neque porro quisquam est qui dolorem</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--/ menu -->
+       
+
         <!-- contact -->
         <section id="contact" class="section-padding">
             <div class="container">
