--- a/pilar.html
+++ b/pilar.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
-                        <img src="img/res01.jpg" alt="" class="img-responsive">
+                        <img src="img/hemboat.png"alt="" class="img-responsive">
                     </div>
                 </div>
                 <div class="col-md-1"></div>
