--- a/pilar.html
+++ b/pilar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pilar</title>
     <!--CSS Sheets-->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy|Bree+Serif|Candal|PT+Sans">
+    <link rel="stylesheet" type="text/css" <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lobster+Two" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -201,12 +201,12 @@
     </footer>
     <!-- / footer -->
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.mixitup.min.js"></script>
-    <script src="js/custom.js"></script>
-    <script src="contactform/contactform.js"></script>
+    <script src="javascript/jquery.min.js"></script>
+    <script src="javascript/jquery.easing.min.js"></script>
+    <script src="javascript/bootstrap.min.js"></script>
+    <script src="javascript/jquery.mixitup.min.js"></script>
+    <script src="javascript/custom.js"></script>
+    <script src="javascript/pilar.js"></script>
 
 </body>
 
