--- a/pilar.html
+++ b/pilar.html
@@ -8,6 +8,9 @@
     <!--CSS Sheets-->
     <link rel="stylesheet" type="text/css" <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lobster+Two" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.woff">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -206,7 +209,8 @@
     <script src="javascript/bootstrap.min.js"></script>
     <script src="javascript/jquery.mixitup.min.js"></script>
     <script src="javascript/custom.js"></script>
-    <script src="javascript/pilar.js"></script>
+    
+    <script src="javascript.pilar.js"></script>
 
 </body>
 
